# cdk-python-rust-lambda-tests

./: LICENSE  README.md  app.py  cdk-build.sh  cdk-deploy.sh
cdk_lambda_rust/: lambda_stack.py
cdk_lambda_rust/runtime/: Cargo.toml
cdk_lambda_rust/runtime/src/: main.rs
tests/: direct-lambda-event.json  lambda-func-url-from-aws-doc.json  lambda-function-url-input-example.json
